--- a/css/styles.css
+++ b/css/styles.css
@@ -1,417 +1,342 @@
-body{
-  font-family:'Roboto',sans-serif;
-  color: #434455;
-  background-color:#ffffff;
-}
-
 h1,
 h2,
 h3,
 h4,
-p{
-  margin: 0px;
+h5,
+h6,
+p {
+    margin: 0;
 }
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+body {
+    font-family: "Roboto", sans-serif;
+    color: #434455;
+    background-color: #FFFFFF;
+}
+
+address {
+    font-style: normal;
+}
+
 img {
-  display: block;
-}
-.container{
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
-}
-.header-conteiner{
-  width: 1158px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  align-items: center;
-  justify-content: space-between;
+    display: block;
 }
 
-ul,ol{
- list-style-type: none;
- margin: 0%px;
- column-gap: ;
- row-gap: ;
-}
-a{
-  text-decoration: none;
+/* nav */
+
+.header-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.menu{
-  display: flex;
-  gap: 40px;
-}
-.menu-link{
-  display: flex;
-  gap: 40px;
-  padding: 24px;
-}
-button{
- cursor: pointer;
- margin: 0 auto;
-}
-.page-header{
-  border-bottom:  1px solid #e7e9fc;
-}
-.page-navigation{
- display: flex;
- align-items: center;
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
 }
 
-.menu .link {
-  display: block;
-  padding: 10px;
-  border-radius: 4px;
-  text-decoration: none;
-  color: black;
-  background-color: #fff;
- }
+/* header */
 
-.menu .link:hover {
-  text-decoration: underline;
- }
-.logotype{
- font-family: Raleway, sans-serif;
- font-size: 18px;
- font-weight: 700;
- line-height: 1.17; /* 116.667% */
- letter-spacing: 0.03em;
- text-transform: uppercase;
- color: var(--IRIS, #4D5AE5);
- margin: 0;
-
-}
-.logotype-span{
- font-family: Raleway,sans-serif;
- font-size: 18px;
- font-weight: 700;
- line-height: 1.17;
- letter-spacing: 0.03em;
- text-transform: uppercase;
- color: #2e2f42;
-}
-.menu:hover{
- color: #404bbf;
-}
-.menu:focus{
- color: #404bbf;
-}
-.menu-item:hover{
- color: #404bbf;
-}
-.menu-item:focus{
- color: #404bbf;
-}
-.menu-link{
- font-family: Roboto, sans-serif;
- font-size: 16px;
- font-weight: 500;
- line-height: 1.5; /* 150% */
- letter-spacing: 0.02em;
- color: var(--NAVY-BLUE, #2E2F42);
- display: flex;
- gap: 40px;
- padding: 24px 0;
-}
-.menu-link:hover{
- color: #404bbf;
-}
-.adress-list{
-  display: flex;
-  gap: 40px;
+.header {
+    background: var(--WHITE, #FFF);
+    display: flex;
+    justify-content: space-around;
+    border-bottom: 1px solid #e7e9fc;
 }
 
-.menu-link:focus{
- color: #404bbf;
-}
-.hedear-address{
- margin-left: auto;
-}
-.menu-contact{
- font-family: Roboto, sans-serif;
- font-size: 16px;
- font-style: normal;
- font-weight: 400;
- line-height: 1.5; /* 150% */
- letter-spacing: 0.02em;
- color: var(--SLATE, #434455);
+.nav {
+    display: flex;
+    align-items: center;
 }
 
-.contact-list{
- display: flex;
- gap: 40px;
+.logo {
+    color: var(--IRIS, #4D5AE5);
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: "Raleway", sans-serif;
+    line-height: 1.17;
+    margin-right: 76px;
 }
-.menu-contact:hover,
-.menu-contact:focus{
-color: #404bbf;
+
+.studio {
+    color: var(--NAVY-BLUE, #2E2F42);
 }
 
+a:hover {
+    color: #404bbf;
+}
 
+a:focus {
+    color: #404bbf;
+}
 
-  /* section 1*/
-  .hero-image{
-   padding: 188px 0 188px;
-   background-color: #2e2f42;
-  }
-  .main-head{
-   text-align: center;
-   align-items: center;
-   font-family: Roboto;
-   font-size: 56px;
-   font-style: normal;
-   font-weight: 700;
-   line-height: 1.07; /* 107.143% */
-   letter-spacing: 0.02em;
-   color: var(--WHITE, #ffffff);
-   max-width: 496px;
-   margin-bottom: 48px;
-   margin-left: auto;
-   margin-right: auto;
-  }
-  .button-action{
-   text-align: center;
-   align-items: center;
-   display: block;
-   min-width: 169px;
-   border: 70px;
-   height: 56px;
-   background-color: #4d5ae5;
-   border-radius: 4px;
-   cursor: pointer;
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.07;
-   letter-spacing: 0.04em;
-   color: #ffffff;
-   background: var(--IRIS, #4D5AE5);
-   font-size: 16px;
-   cursor: pointer;
-   font-family: Roboto;
-   font-style: normal;
-   margin-bottom: 48px;
-   max-width: 496px;
-  }
-  .button-action:hover,
-  .button-action:focus{
-   background-color: #404BBF;
-   margin-left: auto;
-   margin-right: auto;
-  }
+address:hover {
+    color: #404bbf;
+}
 
+address:focus {
+    color: #404bbf;
+}
 
+.nav-list-item {
+    color: var(--NAVY-BLUE, #2E2F42);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    text-decoration: none;
+    font-family: Roboto;
+    padding: 24px 0;
+}
 
+ul {
+    list-style: none;
+}
 
- /*section 2*/
-  .benefits{
-   gap: 24px;
-   padding: 120px 0 120px;
-  }
+.header-address {
+    color: var(--SLATE, #434455);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    text-decoration: none;
+    font-style: normal;
+    font-family: Roboto;
+}
 
- .visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
- }
+.header-address-list {
+    display: flex;
+    gap: 40px;
+}
 
- .made-benefits{
-  display: flex;
-  gap: 24px;
-  margin-bottom: 8px;
-  padding: 120px;
-  font-weight: 500;
-  font-size:20px;
-  line-height:1.2;
-  letter-spacing:0.02em;
-  color: #2e2f42;
-  visibility: hidden;
- }
-  
- .made-menu{
-  gap: 24px;
-  display: flex;
- }
- .made-menu-item{
-  width: calc((100% - 72px)/4);
- }
- .made-menu-item-name{
-  margin-bottom: 8px;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;  
- }
- .made-menu-item-text{
-  font-family: Roboto,sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.50; 
-  letter-spacing: 0.02em;
-  color: var(--SLATE, #434455);
-  margin: 0;
- }
+.adress-list-type {
+    color: #434455;
+    text-decoration: none;
+}
 
+.nav-list {
+    display: flex;
+    gap: 40px;
+}
 
+.nav-item {
+    padding: 24px 0;
+}
 
-
-
-
-
- /*secton 3*/
- .our-team{
-  padding-top: 120px; 
-  padding-bottom: 120px;
-  flex-shrink: 0px;
-  background-color:#f4f4fd;
- }
-  .visually-hidden
-
- .container{
-  padding: 32px;
- }
- .our-team-title{
-  text-align: center;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  font-family: Roboto, sans-serif;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
-  color: #2e2f42;
-  margin-bottom: 72px;
-  
- }
- .name-introduse{
-  padding: 32px 0;
- }
- .our-team-name{
-  display: flex;
-gap: 24px;
- }
- .our-team-list{
-  border-radius: 0px 0px 4px 4px;
- }
- .name{
-  text-align: center;
-  font-family: Roboto, sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.2; /* 120% */
-  letter-spacing: 0.02em;
-  color: var(--NAVY-BLUE, #2E2F42);
-  text-align: center;
-  margin-bottom: 8px;
-  border-radius: 0px 0px 4px 4px;
- }
- .introduce{
-  text-align: center;
-  color: var(--SLATE, #434455);
-  text-align: center;
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.32px;
- }
-
-
-
-
-   /*section 4*/
- .section-portfolio{
-  line-height: 1.11;
-  padding: 120px 0;
- }
- .section-portfolio-title{
-  display: flex;
-  flex-wrap: wrap;
-  gap: 48px 24px;
- }
- .section-title{
-  margin-bottom: 72px;
-  color: var(--NAVY-BLUE, #2E2F42);
-  text-align: center;
-  font-family: Roboto, sans-serif;
-  font-size: 36px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
- }
-  
- .list-portfolio{
-  width: calc((100% - 48px) / 3);
- }
+/* section 1 */
  
- .div{  
-  border: 1px solid var(--CORNFLOWER, #E7E9FC);
-  padding-top: 32px ;
-  padding-bottom: 32px;
-padding-left: ;
- }
- .portfolio-name{
-  font-family: Roboto, sans-serif;
-  font-size:20px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.2; /* 120% */
-  letter-spacing: 0.02em;
-  color: var(--NAVY-BLUE, #2E2F42);
-  margin-bottom: 8px;
- }
- .display{
-  display: block;
-  margin-bottom: 16px;
- }
-
- .portfolio-type{
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.5; /* 150% */
-  letter-spacing: 0.02em;
-  color: var(--SLATE, #434455);
- }
-
-
-
-
-  /*Footer*/
- .end {
-   padding: 100px 0;
-   background: var(--NAVY-BLUE, #2E2F42);
-   flex-direction: column;
- }
-
- .text-end {
-  max-width: 264px;
-  line-height: 1.17;
-  font-family: Roboto,sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 400px;
-  color: #f4f4fd;
-  color: var(--CLOUD, #F4F4FD);
-  letter-spacing: 0.03em;
- }
-.foterlogotype {
-  display: inline-block;
-  margin-bottom: 16px;
+.section-one-main {
+    background: var(--NAVY-BLUE, #2E2F42);
+    padding: 188px 0;
 }
- .logotype-span-foot {
-  color: #f4f4fd;
- }
+  
+.section-one-button {
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    margin:0 auto;
+}
+
+.section-one-main-header {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    font-size: 56px;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+}
+
+button:hover {
+    background-color: #404BBF;
+}
+
+button:focus {
+    background-color: #404BBF;
+}
+
+
+/* section 2 */
+
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+
+.section-two-list {
+    display: flex;
+    gap: 24px;
+}
+
+.section-two-items {
+    width: calc((100% - 72px) / 4);
+}
+.section-two-main {
+    padding: 120px 0;
+}
+
+/* section 3 */
+
+.section-three-main {
+    background-color: #F4F4FD;
+    padding: 120px 0;
+
+}
+
+.section-titles {
+    color: var(--NAVY-BLUE, #2E2F42);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.4px;
+    font-family: Roboto;
+    margin-bottom: 8px;
+}
+
+.section-photo {
+    background: url(<path-to-image>), lightgray -97.034px -0.927px / 181.897% 251.37% no-repeat;
+}
+
+.section-items {
+    color: var(--SLATE, #434455);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    font-family: Roboto;
+}
+
+.section-three-items {
+    background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.team-box {
+    padding: 32px 0;
+}
+
+.section-three-list {
+    display: flex;
+    gap: 24px;
+}
+
+.section-titles-section-three {
+    text-align: center;
+    margin-bottom: 8px;
+}
+
+.section-items-section-three {
+    text-align: center;
+}
+
+/* section 4 */
+
+.section-four-main {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+.section-main-h-two-title {
+    color: var(--NAVY-BLUE, #2E2F42);
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 0.72px;
+    text-transform: capitalize;
+    font-family: Roboto;
+    line-height: 1.11;
+    margin-bottom: 72px;
+}
+
+.section-four-list {
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+    display: flex;
+}
+
+.section-four-items {
+    width: calc((100% - 48px) / 3);
+}
+
+.portfolio-box {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
+
+/* footer */
+
+.footer {
+    background: var(--NAVY-BLUE, #2E2F42);
+    line-height: 1.17;
+    padding: 100px 0;
+}
+
+.web-footer {
+    color: var(--IRIS, #4D5AE5);
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+    line-height: 1.17;
+    display: inline-block;
+    margin-bottom: 16px;
+}
+
+.studio-footer {
+    color: var(--CLOUD, #F4F4FD);
+    font-family: "Raleway", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 21px;
+    letter-spacing: 0.54px;
+    text-transform: uppercase;
+    display: inline-block;
+}
+
+.p-footer {
+    color: var(--CLOUD, #F4F4FD);
+    font-family: Roboto;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    max-width: 264px;
+}
